compiler/testData/diagnostics/tests/multiplatform/incompatibles.ll.kt
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: FIR2IR
// COMPARE_WITH_LIGHT_TREE
// MODULE: common
<!INCOMPATIBLE_MODIFIERS!>expect<!> <!INCOMPATIBLE_MODIFIERS!>actual<!> class <!ACTUAL_WITHOUT_EXPECT!>Sixth<!>

// MODULE: platform()()(common)
